# youlearn

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  YouLearn Menu Bar.command  config.example.json  menubar.py  pyproject.toml  run.sh  start.command  stop.command  stop.sh
app/: config.py  db.py  main.py  transcript.py
app/routes/: clips.py  downloads.py  export.py  learn.py  notes.py  playlists.py  search.py  segments.py  teachers.py  videos.py
docs/: TECHNICAL.md  USER_GUIDE.md
frontend/: app.js  index.html  style.css  tour.js
icon/: IMG_0183.HEIC  IMG_0184.HEIC
