[project]
name = "youlearn"
version = "0.1.0"
description = "Local-first video learning tool"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.1.0",
    "python-multipart>=0.0.6",
    "rumps>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
